fixed spacing

--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,3 +1,8 @@
 .icon {
     margin-right: 8px;
 }
+
+.tree-container{
+    display: flex; 
+    justify-content: space-between;
+}
