--- a/src/app/sort-by/sort-by.component.scss
+++ b/src/app/sort-by/sort-by.component.scss
@@ -1,6 +1,6 @@
 
   .example-container {
-    width: 400px;
+    width: 25%;
     height: 150px;
     background-color: #F1F3F4;
   }
